# TheseusInsight

./: .dockerignore  .gitignore  AGENTS.md  DOCKER_SETUP.md  Dockerfile  LICENSE  Makefile  README.md  TESTING_STRATEGY.md  debug_worker.py  docker-compose.db-external.yml  docker-compose.external-storage-with-db-access.yml  docker-compose.external-storage.yml  docker-compose.test.yml  docker-compose.yml  example_kaggle_harvest.py  minimal_worker.py  nuke_database.sh  package-lock.json  paperpal.sh  prd.md  project_status.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_paperpal.py  run_theseus_insight.py  setup.py  test_kaggle_optimization.py  theseus_judge_worker.py
config/: arxiv_taxonomy.json  external-storage.env.template  orchestration.json  research_interests.txt
docs/: backend_api_spec.md  credential_management_README.md  database_migrations.md  db_migration_README.md  db_spec.md  docker_postgresql.md  embedding_functionality_README.md  frontent_api_spec.md  hybrid_search_functionality_README.md  installation_README.md  kaggle_setup_README.md  migration_guide.md  postgresql_setup.md  research_agent_deep_dive.md  research_agent_system.md  trends_api_spec.md  trends_user_guide.md
electron-app/: BUILD_GUIDE.md  BUILD_UNIVERSAL_GUIDE.md  DEVELOPMENT.md  DISTRIBUTION_GUIDE.md  DISTRIBUTION_README.md  FINAL_SOLUTION_SUMMARY.md  GATEKEEPER_WORKAROUND.md  INSTALLATION_GUIDE.md  POSTGRES_PATH_FIX.md  README.md  TROUBLESHOOTING_GUIDE.md  build-app-debug.sh  build-app-signed-ultra-minimal.sh  build-app-signed.sh  build-app-simple.sh  build-app-turnkey.js  build-app.sh  build-simple-working.js  build-universal.js  build_postgres.sh  bundle-python-deps.sh  bundle-python-runtime.sh  debug-app.sh  debug-backend.sh  debug_database.py  dev-start.sh  download_postgres.sh  env.template  fix-distributed-app.sh  init_db.sh  install-python-deps.sh  main-robust.js  main.js  package-for-distribution.sh  package-lock.json  package.json  start_backend.py  start_backend_robust.py  start_backend_simple.py
examples/: run_harvest_and_judge.sh  similarity_search_examples.py
functional_testing/: clear_papers_db.py  populate_papers_db.py
paperpal/: __init__.py  paperpal.py
paperpal-ui/: package-lock.json  package.json
project_docs/: api_spec.md  backend_api_spec.md  backend_integration_analysis.md  db_spec.md  frontent_api_spec.md  implementation_plan.md  improvement_plan.md  migration_fix.md  observations_and_improvements.md  phase0_summary.md  phase3_trends_integration_plan.md  plan.md  prd.md  project_status.md  project_status_old.md  streamlit_app.md
react_frontend/: README.md  index.html  package.json
scripts/: 000_migration_compatibility.sql  001_init_schema_postgres.sql  002_migrate_to_profiles.sql  003_profiles_trends_integration.sql  004_add_staging_tables.sql  005_optimize_indexes.sql  006_add_processing_checkpoints.sql  007_add_scheduled_tasks.sql  008_add_multi_ollama_support.sql  009_add_lmstudio_multi_server.sql  010_add_per_server_model_config.sql  011_newsletter_multi_server.sql  012_timeline_indexes.sql  013_profile_interest_metrics.sql  014_interest_short_labels.sql  015_profile_star_map.sql  016_profile_star_map_3d.sql  check_and_apply_migrations.sh  check_stuck_jobs.sql  cleanup_stuck_jobs.sql  create_migration_tracking.sql  dump_openapi.py  init_schema_postgres.sql  install-and-start.bat  install-and-start.ps1  install-and-start.sh  mark_migration_applied.sql  migrate_papers_to_profile_scores.py  podcast_podcast-1738778166.json  regenerate_newsletter.py  send_newsletter.py  setup_database.bat  setup_database.ps1  setup_database.sh  start-with-db-access.sh  start-with-external-storage-and-db-access.sh  start-with-external-storage.sh  test_migrations.py  test_staging_tables.py  update_migration_names.sql  (+2 more)
streamlit_app/: README.md  api_client.py  api_utils.py  app.py  requirements.txt
tests/: conftest.py  test_data_handling_sqlite.py  test_main_api.py  test_theseus_insight.py  (+1 more)
(+471 files in other folders)
