[project]
name = "theseus-insight"
version = "0.1.0"
description = "TheseusInsight project"
authors = [
    {name = "KC"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "spacy (>=3.8.4,<4.0.0)",
    "spacy-layout (>=0.0.12,<0.0.13)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "anthropic[bedrock] (>=0.51.0,<0.52.0)",
    "openai (>=1.79.0,<2.0.0)",
    "ollama (>=0.4.8,<0.5.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "json-repair (>=0.44.1,<0.45.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "markdown2 (>=2.5.3,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "moviepy (>=2.1.2,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "google-api-python-client (>=2.169.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlite-vec"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
